--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
+version: '3.9'
+
 services:
   web:
-    image: todo
+    image: krishkumarshrestha/todo:${TAG:-latest}
     ports:
       - "3000:3000"
     depends_on:
@@ -10,16 +12,27 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: todo_db
+    deploy:
+      placement:
+        constraints:
+          - node.role == worker
+      restart_policy:
+        condition: on-failure
 
   backend:
     image: postgres:15
-    restart: always
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: todo_db
     volumes:
       - pgdata:/var/lib/postgresql/data
+    deploy:
+      placement:
+        constraints:
+          - node.role == worker
+      restart_policy:
+        condition: on-failure
 
 volumes:
   pgdata:
